# mediabrowser

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: fmt.sh
src/: main.rs  types.rs
src/endpoints/: delete.rs  download.rs  download_bulk.rs  download_multiple.rs  file.rs  file_server.rs  list.rs  mkdir.rs  mod.rs  mv.rs  save.rs  search.rs  serve.rs  ui.rs  upload.rs
static/: index.html  script.js  styles.css
static/app/: base.css  index.html  main.js  responsive.css  state.js  utils.js
static/browser/: gallery.js  menu.css  navigation.js
static/core/: index.html  responsive.css  state.js
static/css/: base.css  components.css  layout.css  responsive.css  viewer.css
static/files/: file-ops.js  gallery.js  layout.css  navigation.js  selection.js
static/js/: drawer.js  file-ops.js  gallery.js  main.js  media-controls.js  media-viewer.js  navigation.js  selection.js  state.js  utils.js
static/notifications/: notifications.css  notifications.js
static/viewer/: audio-viewer.js  image-viewer.js  media-controls.js  media-viewer.js  text-viewer.js  video-viewer.js  viewer.css  viewer.js
