[package]
name = "filemanager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal", "sync"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
futures-util = "0.3"
mime_guess = "2.0"
percent-encoding = "2.3"
bytes = "1.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
