[package]
name = "mediabrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "macros", "fs", "io-util", "signal", "sync"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
warp = { version = "0.3", default-features = false, features = ["multipart"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
mime_guess = { version = "2.0", default-features = false }
percent-encoding = { version = "2.3", default-features = false, features = ["alloc"] }
bytes = { version = "1.0", default-features = false }
tar = { version = "0.4", default-features = false }
include_dir = { version = "0.7", default-features = false }

[profile]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
